# HRLeaveAgent

./: Dockerfile  README.md  apply_leave_crew.py  apply_leave_crew_sqlite.py  employees_structure.csv  main.py  pyproject.toml  requirements.txt
